Daisy-chain consistency-lag timer segments so that the sum of all segments is equal to the overall timer duration.
Signed-off-by: Yufei Cai <yufei.cai@bosch.io>